Update urls for SEO and whatnot

--- a/html/dungeon/shuten-trail-easy.html
+++ b/html/dungeon/shuten-trail-easy.html
@@ -143,7 +143,7 @@
           <h2 id="floor_guide">Floor Guide</h2>
           <h3 id="green_forest">01~02F Green Forest (Shuffle)</h3>
           <p>
-            The only monsters that appear are <a href="/shiren2/html/system/monster.html#mamel_family">Mamel</a> and <a href="/shiren2/html/system/monster.html#chintala_family">Chintala</a>, similar to Small Valley.<br>
+            The only monsters that appear are <a href="/shiren2/html/system/monsters.html#mamel_family">Mamel</a> and <a href="/shiren2/html/system/monsters.html#chintala_family">Chintala</a>, similar to Small Valley.<br>
             They're weak, so you shouldn't have any trouble defeating them.<br>
             However, there's still a chance you'll collapse if you're surrounded, so walk into<br>a hallway and take them on one at a time if you see multiple monsters in the room.<br>
             Recommended to get Shiren up to level 3 before proceeding to 3F.
@@ -155,13 +155,13 @@
             If you find equipment, go ahead and equip it right away.
           </p>
           <p>
-            There's an item called <a href="/shiren2/html/item/pot.html#savings_pot">Savings Pot</a> exclusively found on 1F of this dungeon.<br>
+            There's an item called <a href="/shiren2/html/item/pots.html#savings_pot">Savings Pot</a> exclusively found on 1F of this dungeon.<br>
             It lets you keep your Gitan if you collapse, but it takes up 3 inventory slots,<br>
             so it's only recommended for those who aren't confident in their abilities.
           </p>
           <h3 id="bamboo_forest">03~04F Bamboo Forest (Shuffle)</h3>
           <p>
-            Monsters include <a href="/shiren2/html/system/monster.html#weather_doll_family">Weather Doll</a>, <a href="/shiren2/html/system/monster.html#ashigarudon_family">Ashigarudon</a>, <a href="/shiren2/html/system/monster.html#slug_family">Slug</a>, <a href="/shiren2/html/system/monster.html#yamikichi_family">Yamikichi</a>, and <a href="/shiren2/html/system/monster.html#piko_hammer_family">Piko Hammer</a>.
+            Monsters include <a href="/shiren2/html/system/monsters.html#weather_doll_family">Weather Doll</a>, <a href="/shiren2/html/system/monsters.html#ashigarudon_family">Ashigarudon</a>, <a href="/shiren2/html/system/monsters.html#slug_family">Slug</a>, <a href="/shiren2/html/system/monsters.html#yamikichi_family">Yamikichi</a>, and <a href="/shiren2/html/system/monsters.html#piko_hammer_family">Piko Hammer</a>.
           </p>
           <p>
             Slugs have a special attack that lowers strength, so avoid letting them act first.<br>
@@ -175,7 +175,7 @@
           </p>
           <h3 id="deserted_shaft">05~06F Deserted Shaft</h3>
           <p>
-            Monsters include <a href="/shiren2/html/system/monster.html#piko_hammer_family">Piko Hammer</a>, <a href="/shiren2/html/system/monster.html#droplet_ninja_family">Droplet Ninja</a>, and <a href="/shiren2/html/system/monster.html#armordillo_family">Armordillo</a>.
+            Monsters include <a href="/shiren2/html/system/monsters.html#piko_hammer_family">Piko Hammer</a>, <a href="/shiren2/html/system/monsters.html#droplet_ninja_family">Droplet Ninja</a>, and <a href="/shiren2/html/system/monsters.html#armordillo_family">Armordillo</a>.
           </p>
           <p>
             Traps begin to appear from this area.
@@ -197,7 +197,7 @@
             If you do drop items, be sure to pick them up after defeating it.
           </p>
           <p>
-            <a href="/shiren2/html/system/monster.html#hunger_puppet_family">Hunger Puppet</a> will make an appearance on 6F.
+            <a href="/shiren2/html/system/monsters.html#hunger_puppet_family">Hunger Puppet</a> will make an appearance on 6F.
           </p>
           <p>
             Hunger Puppet can sing a song that lowers Shiren's fullness by 5%.<br>
@@ -254,7 +254,7 @@
               Since it's your first time through, go ahead and buy some Storage Pots and Otogiriso.
             </li>
             <li>
-              The shop also offers a strong <a href="/shiren2/html/item/shield.html#beetle_shield">Beetle Shield</a>, but you likely won't be able to buy it yet.<br>
+              The shop also offers a strong <a href="/shiren2/html/item/shields.html#beetle_shield">Beetle Shield</a>, but you likely won't be able to buy it yet.<br>
               Damage reduction from defense value doesn't make as much of a difference in Shiren 2<br>
               compared to other games in the series, so it's not an essential purchase either way.
             </li>
@@ -323,7 +323,7 @@
           </p>
           <h3 id="inexhaustible_falls">07F Inexhaustible Falls (Shuffle)</h3>
           <p>
-            Monsters include <a href="/shiren2/html/system/monster.html#hunger_puppet_family">Hunger Puppet</a>, <a href="/shiren2/html/system/monster.html#zalokleft_family">Zalokleft</a>, and <a href="/shiren2/html/system/monster.html#ndubba_family">N'dubba</a>.
+            Monsters include <a href="/shiren2/html/system/monsters.html#hunger_puppet_family">Hunger Puppet</a>, <a href="/shiren2/html/system/monsters.html#zalokleft_family">Zalokleft</a>, and <a href="/shiren2/html/system/monsters.html#ndubba_family">N'dubba</a>.
           </p>
           <p>
             Zalokleft will steal an item on the ground or from Shiren's inventory, and then warp away.<br>
@@ -337,23 +337,23 @@
           </p>
           <h3 id="stalactite_cave">08F Stalactite Cave</h3>
           <p>
-            Monsters include the ones from 7F, and new arrivals <a href="/shiren2/html/system/monster.html#ashigarudon_family">Samuraidon</a> and <a href="/shiren2/html/system/monster.html#horse_ronin_family">Horse Ronin</a>.
+            Monsters include the ones from 7F, and new arrivals <a href="/shiren2/html/system/monsters.html#ashigarudon_family">Samuraidon</a> and <a href="/shiren2/html/system/monsters.html#horse_ronin_family">Horse Ronin</a>.
           </p>
           <p>
             Samuraidon is the level 2 monster of the Ashigarudon family.<br>
-            It has a <a href="/shiren2/html/item/shield.html#counter_shield">Counter Shield</a> equipped, so a portion of the damage<br>
+            It has a <a href="/shiren2/html/item/shields.html#counter_shield">Counter Shield</a> equipped, so a portion of the damage<br>
             you deal to it when attacking will be reflected back at Shiren.
           </p>
           <p>
-            Horse Ronin shoots <a href="/shiren2/html/item/projectile.html#silver_arrow">Silver Arrows</a> that pierce through characters from a distance.<br>
+            Horse Ronin shoots <a href="/shiren2/html/item/projectiles.html#silver_arrow">Silver Arrows</a> that pierce through characters from a distance.<br>
             Be careful where you stand when Horse Ronin is nearby, since its silver arrows can<br>
-            defeat other monsters, resulting in Horse Ronin leveling up into a <a href="/shiren2/html/system/monster.html#horse_ronin_family">Horse Samurai</a>.<br>
+            defeat other monsters, resulting in Horse Ronin leveling up into a <a href="/shiren2/html/system/monsters.html#horse_ronin_family">Horse Samurai</a>.<br>
             Not even Dragon Grass is enough to defeat Horse Samurai in a single hit (79 HP),<br>
             so if that happens, run to the stairs while moving in a zig-zag pattern to avoid arrows.
           </p>
           <h3 id="abyss_gorge">09~10F Abyss Gorge (Shuffle)</h3>
           <p>
-            New arrivals for 9F include <a href="/shiren2/html/system/monster.html#nigiri_trainee_family">Nigiri Morph</a> and <a href="/shiren2/html/system/monster.html#tiger_tosser_family">Tiger Tosser</a>.
+            New arrivals for 9F include <a href="/shiren2/html/system/monsters.html#nigiri_trainee_family">Nigiri Morph</a> and <a href="/shiren2/html/system/monsters.html#tiger_tosser_family">Tiger Tosser</a>.
           </p>
           <p>
             Nigiri Morph transforms Shiren's items into Large Riceballs.<br>
@@ -364,7 +364,7 @@
             Tiger Tosser has high attack, and throws Shiren either at other monsters or onto traps.
           </p>
           <p>
-            New arrivals for 10F include <a href="/shiren2/html/system/monster.html#shaaga_family">Shaaga</a>, <a href="/shiren2/html/system/monster.html#droplet_ninja_family">Landmine Ninja</a>, and <a href="/shiren2/html/system/monster.html#sheep_priest_family">Sheep Priest</a>.
+            New arrivals for 10F include <a href="/shiren2/html/system/monsters.html#shaaga_family">Shaaga</a>, <a href="/shiren2/html/system/monsters.html#droplet_ninja_family">Landmine Ninja</a>, and <a href="/shiren2/html/system/monsters.html#sheep_priest_family">Sheep Priest</a>.
           </p>
           <p>
             Shaaga doesn't have a special ability, but has high attack.<br>
