--- a/html/index.html
+++ b/html/index.html
@@ -22,46 +22,46 @@
         <div class="sidebar-menu">
           <div class="sidebar-category">Items</div>
           <div class="sidebar-links">
-            ┣ <a href="/shiren2/html/item/weapon.html">Weapons</a>
-            / <a href="/shiren2/html/item/shield.html">Shields</a><br>
-            ┣ <a href="/shiren2/html/item/bracelet.html">Bracelets</a>
+            ┣ <a href="/shiren2/html/item/weapons.html">Weapons</a>
+            / <a href="/shiren2/html/item/shields.html">Shields</a><br>
+            ┣ <a href="/shiren2/html/item/bracelets.html">Bracelets</a>
             / <a href="/shiren2/html/item/food.html">Food</a>
             / <a href="/shiren2/html/item/grass.html">Grass</a><br>
-            ┣ <a href="/shiren2/html/item/staff.html">Staves</a>
-            / <a href="/shiren2/html/item/scroll.html">Scrolls</a>
-            / <a href="/shiren2/html/item/pot.html">Pots</a><br>
-            ┣ <a href="/shiren2/html/item/projectile.html">Projectiles</a>
-            / <a href="/shiren2/html/item/material.html">Materials</a><br>
-            ┣ <a href="/shiren2/html/item/decoration.html">Decorations</a>
-            / <a href="/shiren2/html/item/other.html">Other</a><br>
-            ┗ <a href="/shiren2/html/item/price_chart.html">Price Chart</a>
+            ┣ <a href="/shiren2/html/item/staves.html">Staves</a>
+            / <a href="/shiren2/html/item/scrolls.html">Scrolls</a>
+            / <a href="/shiren2/html/item/pots.html">Pots</a><br>
+            ┣ <a href="/shiren2/html/item/projectiles.html">Projectiles</a>
+            / <a href="/shiren2/html/item/materials.html">Materials</a><br>
+            ┣ <a href="/shiren2/html/item/decorations.html">Decorations</a>
+            / <a href="/shiren2/html/item/other-items.html">Other</a><br>
+            ┗ <a href="/shiren2/html/item/price-chart.html">Price Chart</a>
           </div>
           <div class="sidebar-category">Dungeons</div>
           <div class="sidebar-links">
             <div class="sidebar-sub-category">Story</div>
-            ┣ <a href="/shiren2/html/dungeon/small_valley.html">Small Valley</a><br>
-            ┣ <a href="/shiren2/html/dungeon/shuten_trail_easy.html">Shuten Trail Easy</a><br>
-            ┣ <a href="/shiren2/html/dungeon/shuten_trail_mid.html">Shuten Trail Mid</a><br>
-            ┣ <a href="/shiren2/html/dungeon/shuten_trail_hard.html">Shuten Trail Hard</a><br>
+            ┣ <a href="/shiren2/html/dungeon/small-valley.html">Small Valley</a><br>
+            ┣ <a href="/shiren2/html/dungeon/shuten-trail-easy.html">Shuten Trail Easy</a><br>
+            ┣ <a href="/shiren2/html/dungeon/shuten-trail-mid.html">Shuten Trail Mid</a><br>
+            ┣ <a href="/shiren2/html/dungeon/shuten-trail-hard.html">Shuten Trail Hard</a><br>
             ┗ <a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a>
           </div>
           <div class="sidebar-sub-category">Post-game</div>
           <div class="sidebar-links-sub">
-            ┣ <a href="/shiren2/html/dungeon/hidden_hole.html">Hidden Hole</a><br>
-            ┣ <a href="/shiren2/html/dungeon/hidden_hole_b.html">Hidden Hole (B)</a><br>
-            ┣ <a href="/shiren2/html/dungeon/sealed_room.html">Sealed Room</a><br>
-            ┣ <a href="/shiren2/html/dungeon/halfway_well.html">Halfway Well</a><br>
-            ┗ <a href="/shiren2/html/dungeon/road_to_the_end.html">Road To The End</a>
+            ┣ <a href="/shiren2/html/dungeon/shrines-hidden-hole.html">Hidden Hole</a><br>
+            ┣ <a href="/shiren2/html/dungeon/shrines-hidden-hole-b.html">Hidden Hole (B)</a><br>
+            ┣ <a href="/shiren2/html/dungeon/sealed-room.html">Sealed Room</a><br>
+            ┣ <a href="/shiren2/html/dungeon/halfway-well.html">Halfway Well</a><br>
+            ┗ <a href="/shiren2/html/dungeon/road-to-the-end.html">Road To The End</a>
           </div>
           <div class="sidebar-category">System</div>
           <div class="sidebar-links">
             ┣ <a href="/shiren2/html/system/basics.html">Basics</a><br>
-            ┣ <a href="/shiren2/html/system/seal.html">Seals</a>
-            / <a href="/shiren2/html/system/monster.html">Monsters</a><br>
+            ┣ <a href="/shiren2/html/system/seals.html">Seals</a>
+            / <a href="/shiren2/html/system/monsters.html">Monsters</a><br>
             ┣ <a href="/shiren2/html/system/castle.html">Castle</a>
-            / <a href="/shiren2/html/system/ally.html">Allies</a><br>
-            ┣ <a href="/shiren2/html/system/trap.html">Traps</a>
-            / <a href="/shiren2/html/system/statue.html">Statues</a><br>
+            / <a href="/shiren2/html/system/allies.html">Allies</a><br>
+            ┣ <a href="/shiren2/html/system/traps.html">Traps</a>
+            / <a href="/shiren2/html/system/statues.html">Statues</a><br>
             ┣ <a href="/shiren2/html/system/golden_interval.html">Golden Intervals</a><br>
             ┣ <a href="/shiren2/html/system/monster_kingdom.html">Monster Kingdom</a><br>
             ┗ <a href="/shiren2/html/system/monster_house.html">Monster House</a>
