update more urls, add sitemap.xml

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -41,25 +41,27 @@
     / <a href="/shiren2/html/system/allies.html">Allies</a><br>
     ┣ <a href="/shiren2/html/system/traps.html">Traps</a>
     / <a href="/shiren2/html/system/statues.html">Statues</a><br>
-    ┣ <a href="/shiren2/html/system/golden_interval.html">Golden Intervals</a><br>
-    ┣ <a href="/shiren2/html/system/monster_kingdom.html">Monster Kingdom</a><br>
-    ┗ <a href="/shiren2/html/system/monster_house.html">Monster House</a>
+    ┣ <a href="/shiren2/html/system/golden-interval.html">Golden Interval</a><br>
+    ┣ <a href="/shiren2/html/system/monster-kingdom.html">Monster Kingdom</a><br>
+    ┣ <a href="/shiren2/html/system/monster-house.html">Monster House</a><br>
+    ┗ <a href="/shiren2/html/system/status-conditions.html">Conditions</a>
+    / <a href="/shiren2/html/system/glitches.html">Glitches</a><br>
   </div>
   <div class="sidebar-category">Playing</div>
   <div class="sidebar-links">
     <div class="sidebar-sub-category">Techniques</div>
-    ┣ <a href="/shiren2/html/playing/basics.html">Basics</a>
-    / <a href="/shiren2/html/playing/advanced.html">Advanced</a><br>
-    ┗ <a href="/shiren2/html/playing/stealing.html">Stealing</a>
+    ┣ <a href="/shiren2/html/playing/basic-techniques.html">Basics</a>
+    / <a href="/shiren2/html/playing/advanced-techniques.html">Advanced</a><br>
+    ┗ <a href="/shiren2/html/playing/stealing-techniques.html">Stealing</a>
   </div>
   <div class="sidebar-sub-category">Other</div>
   <div class="sidebar-links-sub">
-    ┣ <a href="/shiren2/html/playing/faq.html">FAQ</a>
-    / <a href="/shiren2/html/playing/secret_phrases.html">Secret Phrases</a><br>
-    ┣ <a href="/shiren2/html/playing/gallery.html">Gallery</a>
-    / <a href="/shiren2/html/playing/exp_and_stat.html">Exp &amp; Stats</a><br>
-    ┣ <a href="/shiren2/html/playing/faq.html">Story Progression</a><br>
-    ┗ <a href="/shiren2/html/playing/restricted_play.html">Restricted Play</a>
+    ┣ <a href="/shiren2/html/playing/frequently-asked-questions.html">FAQ</a>
+    / <a href="/shiren2/html/playing/secret-phrases.html">Secret Phrases</a><br>
+    ┣ <a href="/shiren2/html/playing/equipment-gallery.html">Gallery</a>
+    / <a href="/shiren2/html/playing/exp-and-stats.html">Exp &amp; Stats</a><br>
+    ┣ <a href="/shiren2/html/playing/story-progression.html">Story Progression</a><br>
+    ┗ <a href="/shiren2/html/playing/restricted-play.html">Restricted Play</a>
   </div>
   <div class="sidebar-category">Links</div>
   <div class="sidebar-links">
