add ids to h2 on ally page

--- a/html/item/price-chart.html
+++ b/html/item/price-chart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Item Price Chart - Shiren 2 Wiki</title>
+    <title>Price Chart - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
@@ -18,7 +18,7 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
-          <h2 class="page_heading">Item Price Chart</h2>
+          <h2 class="page_heading">Price Chart</h2>
           <div id="item_category_links" class="item_category_links">
             <ul>
               <li><a href="#scroll_bracelet_grass">Scrolls・Bracelets・Grasses</a></li>
