--- a/html/system/allies.html
+++ b/html/system/allies.html
@@ -42,7 +42,7 @@
           </ul>
           <p>Ally characters follow behind Shiren, and automatically move toward enemies to attack them.<br>Allies run from enemies if their HP falls below 25%, and enemies level up if they defeat an ally.<br>Shopkeepers, Sheriffs, and Guard Dogs won't attack allies, so they can be used as a shield when stealing.</p>
           <p>Allies gain experience when Shiren defeats an enemy,<br>and Shiren and other allies also gain experience if an ally defeats an enemy.<br>Generally stats like level, HP, strength, Landmine damage, etc. are the same as Shiren for allies,<br>but unlike Shiren, their defense increases with level ups, they don't have hunger,<br>and the amount of experience needed to level up differs per character.<br>See the <a href="/shiren2/html/playing/exp-and-stats.html">Exp & Stats</a> page for details about ally stats.</p>
-          <h2>Characters</h2>
+          <h2 id="characters">Characters</h2>
           <h3 id="himakichi" class="ally_h3">Himakichi</h3>
           <img src="/shiren2/image/ally/himakichi.png" width="48" height="78" alt="himakichi">
           <p>A <a href="/shiren2/html/system/monsters.html#bored_kappa_family">Bored Kappa</a> monster who always has more time than he knows what to do with.<br>He takes an interest in fighting Oni after some convincing by Koppa, and joins Shiren as an ally.</p>
@@ -209,7 +209,7 @@
           <p>If Mamo is defeated, all items that were inside its drawers will be spread on the ground.<br>Some items will vanish if there isn't enough space for them to be dropped on the ground,<br>such as if Mamo is defeated in a hallway and was carrying 4 or more items. (only space for 3 items).<br>So it's best to keep an eye on Mamo at all times, and avoid having it wander into hallways on its own.</p>
           <p>Unlike Shiren GB2, items thrown at Mamo will simply hit them rather than storing the item in its drawers,<br>so it's <strong>easy to lose equipment if you encounter a Kengo in a hallway with Mamo behind you</strong>.<br>Given that fact, it's best to be extra careful on floors where Kengo family monsters can appear.</p>
           <span class="warning_text">Mamo's items will vanish if you select "Return to Napus Village" from the main menu / copy a journal.</span>
-          <h2>Dialogue</h2>
+          <h2 id="dialogue">Dialogue</h2>
           <p>Talk to allies in dungeons to get a rough idea how much HP they have left without ending your turn.<br>Note that the amount of HP displayed when using a Knowledge Staff represents their max HP.<br>There are four levels of dialogue based on remaining HP. (1~24%, 25~49%, 50~74%, and 75~100%).<br>Alternate lines are spoken when an ally gets hit or caught by a trap, or when an ally defeats a monster.<br>Lastly, allies will have different dialogue altogether outside of dungeons.</p>
           <h3 id="himakichi_dialogue">Himakichi</h3>
           <table class="ally_table">
