--- a/html/header.html
+++ b/html/header.html
@@ -1,3 +1,3 @@
 <div>
-<img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" style="vertical-align: middle;"> <span>Shiren 2 Wiki</span>
+  <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" style="vertical-align: middle;"></a> <span>Shiren 2 Wiki</span>
 </div>
