Copy and paste the header, what could go wrong?

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -14,7 +14,14 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header"></div>
+      <div id="header" class="box header">
+        <div>
+          <a href="/shiren2/html/index.html">
+            <img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image">
+          </a>
+          <h1 class="h1_header"><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Onigashima</h1>
+        </div>
+      </div>
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
