--- a/html/header.html
+++ b/html/header.html
@@ -1,3 +1,6 @@
 <div>
-  <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" style="vertical-align: middle;"></a> <span>Shiren 2 Wiki</span>
+  <a href="/shiren2/html/index.html">
+    <img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image">
+  </a>
+  <h1 class="h1_header"><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / [Page]</h1>
 </div>
