--- a/html/item/materials.html
+++ b/html/item/materials.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Materials - Shiren 2 Wiki</title>
+    <title>Castle Materials - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
@@ -14,12 +14,17 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header"></div>
+      <div id="header" class="box header"><div>
+          <a href="/shiren2/html/index.html">
+            <img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image">
+          </a>
+          <h1 class="h1_header"><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Castle Materials</h1>
+        </div></div>
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
           <div id="item_summary_table">
-            <h2 class="page_heading">Material Summary</h2>
+            <h2 class="page_heading">Castle Material Summary</h2>
             <table>
               <thead>
                 <tr>
@@ -140,7 +145,7 @@
             </table>
           </div>
           <div id="item_details">
-            <h2>Material Details</h2>
+            <h2>Castle Material Details</h2>
             <div>
               <h3 id="soil">Soil (土)</h3>
               <div class="detail-entry">
