--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,10 @@
     <div class="wrapper">
       <div id="header" class="box header">
         <div>
-          <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" style="vertical-align: middle;"></a> <span>Shiren the Wanderer 2: Oni Assault! Shiren Castle! Wiki</span>
+          <a href="/shiren2/html/index.html">
+            <img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image">
+          </a>
+          <h1>Shiren the Wanderer 2: Oni Assault! Shiren Castle! Wiki</h1>
         </div>
       </div>
       <div id="sidebar" class="box sidebar">
