--- a/html/item/decorations.html
+++ b/html/item/decorations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Decorations - Shiren 2 Wiki</title>
+    <title>Castle Decorations - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
@@ -14,12 +14,19 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header"></div>
+      <div id="header" class="box header">
+        <div>
+          <a href="/shiren2/html/index.html">
+            <img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image">
+          </a>
+          <h1 class="h1_header"><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Castle Decorations</h1>
+        </div>
+      </div>
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
           <div id="item_summary_table">
-            <h2 class="page_heading">Decoration Summary</h2>
+            <h2 class="page_heading">Castle Decoration Summary</h2>
             <table>
               <thead>
                 <tr>
