see, it was already a bad idea

--- a/html/playing/faq.html
+++ b/html/playing/faq.html
@@ -19,13 +19,13 @@
           <a href="/shiren2/html/index.html">
             <img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image">
           </a>
-          <h1 class="h1_header"><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Frequently Asked Questions (FAQ)</h1>
+          <h1 class="h1_header"><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / FAQ</h1>
         </div>
       </div>
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
-          <h2 class="page_heading">Frequently Asked Questions (FAQ)</h2>
+          <h2 class="page_heading">FAQ (Frequently Asked Questions)</h2>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
