more url updates

--- a/html/item/other-items.html
+++ b/html/item/other-items.html
@@ -23,7 +23,7 @@
       <div id="content" class="box content">
         <div>
           <div id="item_summary_table">
-            <h2 class="page_heading">Other Item Summary</h2>
+            <h2 class="page_heading">Other Items Summary</h2>
             <table>
               <thead>
                 <tr>
@@ -81,7 +81,7 @@
             </table>
           </div>
           <div id="item_details">
-            <h2>Other Item Details</h2>
+            <h2>Other Items Details</h2>
             <div>
               <h3 id="voucher">Voucher (割引券)</h3>
               <div class="detail-entry">
