--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>System Basics - Shiren 2 Wiki</title>
+    <title>Gameplay Basics - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
@@ -16,13 +16,13 @@
     <div class="wrapper">
       <div id="header" class="box header">
         <div>
-          <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / System Basics</h1>
+          <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Gameplay Basics</h1>
         </div>
       </div>
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
-          <h2 class="page_heading">Basics of Gameplay Mechanics and Systems</h2>
+          <h2 class="page_heading">Gameplay Basics</h2>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
