--- a/html/system/synthesis-seals.html
+++ b/html/system/synthesis-seals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Seals - Shiren 2 Wiki</title>
+    <title>Synthesis Seals - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
@@ -17,12 +17,12 @@
     <div class="wrapper">
       <div id="header" class="box header">
         <div>
-          <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Seals</h1>
+          <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Synthesis Seals</h1>
         </div>
       </div>
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
-        <h2 class="page_heading">Seals</h2>
+        <h2 class="page_heading">Synthesis Seals</h2>
         <p>Seals are special abilities that can be <a href="">synthesized</a> onto weapons or shields.</p>
         <p>Each seal is represented as single Japanese character, and the color depends on the source item.<br>The three colors are: equipment (blue), food/grasses (green), and scrolls (red).<br>Some seals like 金 can be found in two colors, and have a slightly different effect based on color.</p>
         <p>Generally seals can make your adventure smoother, but some of them are a double-edged sword,<br>have a pointless effect, or have an outright negative effect, so some care is needed.</p>
